--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
 -OK- exercise: test doubles, with async await and without (i.e. directly with promises)
 -- mongodb
 -- legacy exercises
--- quickie tests for JS, examples: add an element to an array, see if it's in there; equals comparison; etc.
+-OK- quickie tests for JS, examples: add an element to an array, see if it's in there; equals comparison; etc.
 -OK- how to do double comparisons. chai expect(1.5).to.be.closeTo(1.502)  also: to.be.approximately
 -- integration testing tools?
 -OK- actions reducers etc
@@ -12,7 +12,7 @@
 -- understand sinon sandbox
 -OK- debugging
 -- simple prototype update to do test double
--- nock testing
+-OK- nock testing--use for http package, not axios, I think
 
 
 https://wietse.loves.engineering/testing-promises-with-mocha-90df8b7d2e35
